Updating lab3, including contour plots and a section plot for 1 cruise

--- a/Tutorials/Colby2018/Lab3/Lab03.Rmd
+++ b/Tutorials/Colby2018/Lab3/Lab03.Rmd
@@ -1,22 +1,104 @@
 ---
-title: "Lab 3: Visualizing oceanographic sections"
+title: "Lab 3: Visualizing 2D patterns in oceanographic cruise data"
 output: html_notebook
 ---
 
-This lab focuses on visualizing oceanographic sections. The tools you are introduced to here can be used to graph and analyze data in your labs, your independent research projects and the cruise data gathered throughout the semester. Be sure to save any scripts that you develop so you can continue to use them.
+This lab focuses on visualizing temporal and spatial patterns in oceanographic cruise data i.e. how do parameters vary upriver compared with the open ocean or how do parameters vary with depth or how does one station change over the season? The tools you are introduced to here can be used to graph and analyze data in your labs, your independent research projects and the cruise data gathered throughout the semester. Be sure to save any scripts that you develop so you can continue to use them.
 
-# 1. Importing and wrangling data
+# A. Visualization of discrete data using contour plots
 
-This week, we are going to start with the data from the csv files we created last week. However, before we can plot the oceanographic sections, we need to wrangle the data into an easier form to work with. A lot of your time coding can be spent wrangling data, but it is definitely worth spending the time to get your data into a format that is easy to use, manipulate, plot and analyze. 
+In this section, we are going to visualize how parameters vary at each station for each cruise.
 
-Let's start by importing the data as before.
+## A1. Importing data
+
+We are going to look at some of the discrete data, taken from the Niskin bottles. To do this, we need to create another csv file from the Colby_cruise_data_2012-2017.xlsx sheet like last week. But let's start by setting our working directory.
+
+```{r}
+setwd('C:/Users/Catherine/Documents/REUColbyCoding/CMdev/RbigelowCMdev/Lab03_2018')
+```
+
+### Creating discrete data csv file
+
+1. Open Colby_cruise_data_2012-2017.xlsx
+2. Open a new blank Excel file
+2. Go to the "discrete data" tab
+3. Select and copy the following columns: date, cruise, station, depth, SiO4,	NO3+2,	PO4,	NH4,	Bacteria Conc,	Viral Conc,	Chl Total,	CHL <20um,	CHL<3um,	Flowcam Biomass.
+5. Paste the columns into the blank Excel file
+6. Delete the rows from 2012 - 2015 and 2017 i.e. so the only year left is 2016.
+7. Delete the dates column and the top two rows (the row of units and the row contain the units of a few of the columns)
+8. Press CTRL-F on Windows, or the Command-F on a Mac, to bring up the "Find and Replace" window.
+9. Go to the Replace tab, enter "Cruise" in the "Find What" box and nothing in the "Replace with" box, hit "Replace all"
+10. Repeat 9 for the word "BLOS" and close the window
+11. Save the file as a CSV (Comma Delimited) with a sensible name e.g. Colby_discrete_data_2016.csv
+
+### Importing the data
+
+Let's import the data as before.
 
 ```{r}
 # read in the whole csv file
-DATA <- read.csv('Colby_cruise_data_2012-2017.csv', header = TRUE)
+discreteDATA <- read.csv('Colby_discrete_data_2016.csv', header = TRUE)
 ```
 
-## 1.1 Coding technique: for-loops
+## A2. Data wrangling and creating contour plots
+
+We are going to create a contour plot for the surface data, for station vs cruise. To do this we are going to use the `plotly` library, so let's import the package, and load it into our workspace
+
+```{r}
+install.packages("plotly")
+
+library("plotly")
+```
+
+Now we can extract the surface data from our `DATA` data frame and plot the result.
+
+```{r}
+#extracting data with a depth of less than 5m
+surface = discreteDATA[discreteDATA$Depth < 5,]
+
+#plotting the contour plot
+p = plot_ly(x= surface$ID, y = surface$Station, z = surface$NO3.2, 
+        type = "contour")
+
+#adding the axis labels and title
+layout(p, xaxis = list(title = 'Cruise number'), yaxis = list(title = 'Station number'), title = "NO3.2 (uM)")
+```
+
+
+# B. Visualization of continuous data using section plots
+
+In this section, we are going to visualize spatial changes in terms of depth and station for a given cruise.
+
+## B1. Importing and wrangling data
+
+For this section, we are going to use the csv file we made last day which contains all the continuous CTD profiles, and extract out one cruise.
+
+```{r}
+#importing the CTD data
+CTDdata <- read.csv('Colby_cruise_data_2012-2017.csv')
+
+#making a list of the dates of each cruise
+dates <- unique(CTDdata[['Date']])
+
+#extracting data for the cruise on September 8th 2016
+cruiseData <- CTDdata[CTDdata[['Date']] == 20160908,]
+```
+
+We could use the same plotting function as before to plot e.g. Temperature:
+
+```{r}
+# plotting the contour plot
+p <- plot_ly(x = cruiseData$Station, y = cruiseData$Depth, z = cruiseData$Temperature, type = "contour", contours = list(showlines = FALSE))
+
+#adding the labels and reversing the y-axis
+layout(p,yaxis = list(autorange = "reversed",title = 'Depth (m)'),
+       xaxis = list(title = 'Station number'), 
+       title = "Temperature (deg C)")
+```
+
+We end up with distinct bands at the deeper depths. This is because of the interpolation that has been done by the plotting function. Stations 1 - 3 are 50m or shallower, hence the only data at the deep depths are from station 4. The plotting function then assumes that is the value at that depth for all stations, which is incorrect. Let's try a different method instead.
+
+## B2. Coding technique: for-loops
 
 When you want to repeat the same bit of code multiple times, a for-loop can be your friend. For example, if you would like to plot a section for each cruise, rather than type out the code for each cruise individually, we can just write it once and iterate or *loop* over the code. 
 
@@ -36,93 +118,48 @@ for (ii in 1:4) {
 }
 ```
 
-## 1.2 Wrangling data
+## B3. Plotting oceanographic section
 
-For reasons which will become apparent later, we are going to group our data by cruise, then by station. To do this we are going to take the following steps:
-
-1. loop through each cruise (using the dates to identify different cruises)
-2. extract the data for the required cruise from the main `DATA` data frame 
-3. create a unique cruise name for the required cruise of the form: colbyYYYYMMDD, where YYYYMMDD is the date in year, month, day
-4. loop through each station (for a given cruise)
-5. extract the data for the required station from the required cruise 
-6. add the station data to a list, labeling it by the station number
-4. add the station list data to a master list, labeling it with the unique cruise id.
-
-```{r}
-#making a list of the dates of each cruise
-dates <- unique(DATA[['Date']])
-
-#creating an empty list which we will fill with more lists in a for-loop
-cruiseList <- list()
-
-#loop to extract each cruise from the main DATA data frame and to group the individual cruise lists into one master list: cruiseList
-for (dd in dates){
-  #extracting a specific cruise into a list from the main DATA data frame
-  cruiseData <- DATA[DATA[['Date']] == dd,]
-  
-  #making a unique cruise id
-  id <- paste("colby",dd,sep="")
-  
-  #making a list of all the stations on this cruise
-  stations <- unique(cruiseData$Station)
-
-  #creating an empty list to be filled with each station on the next for-loop
-  stationList <- list()
-  
-  #loop to extract each station from the cruiseData dataframe and to group the individual stations into one list for a given cruise: stationList 
-  for (ss in stations){
-    #extracting a specific station from the cruiseData dataframe
-    stationData <- cruiseData[cruiseData$Station == ss,]
-    
-    #making a station id
-    stationID <- paste('station',ss,sep = '')
-    
-    #adding the stationData to the station list, naming it with the station id
-    stationList[[stationID]] <- stationData
-  }
-
-  
-  #adding the staton list to the master cruiseList, naming it with the unique id
-  cruiseList[[id]] <- stationList
-}
-```
-
-# 2. Plotting oceanographic section
-
-In this section, we'll plot oceanographic sections for past Colby Semester cruises. To do this, we'll make use of the fields package, which provides tools for analyzing and visualizing spatial data.
-
+For this method, we'll make use of the fields package, which provides tools for analyzing and visualizing spatial data.
 
 ```{r}
 library("fields")
 ```
 
-#### Example: plot a temperature section for the colby20170912 cruise
+To do this plot, we are goint to need to manipulate our data a bit more. We need to make our Temperature data into a matrix, where each row represents a depth, and each column represents a different station. The depth data are not consistent; they are all at irregular intervals. Therefore, to put the temperature data into a matrix, we are going to need to bin the data into regular depth intervals of 1m.
 
 ```{r}
-cruiseData <- cruiseList$colby20170912
 
-stationLat <- c(43+54.130/60, 43+51.8/60, 43+48.56/60, 43+44.87/60)
+#stationLat <- c(43+54.130/60, 43+51.8/60, 43+48.56/60, 43+44.87/60)
 
+#creating an empty matrix with 100 rows (i.e. for 100 depths) and 4 columns (i.e. one for each station)
 TEM <- matrix(NA,nrow = 100, ncol = 4)
 
-stations = names(cruiseData)
-
-for (st in stations){
+#looping through each station
+for (st in 1:4){
+  #looping through each depth interval (from 1m to 100m)
   for (j in 1:100){
-    stationData <- cruiseData[[st]]
+    #extracting the relevant station from the cruiseData data frame
+    stationData <- cruiseData[cruiseData$Station == st,]
     
-    stationNum <- as.numeric(substr(st,nchar(st),nchar(st)))
+    #binned temperature value for given depth interval
+    temp = mean(stationData[ceiling(stationData$Depth)==j,'Temperature']) 
     
-    TEM[j,stationNum] <- mean(stationData[ceiling(stationData$Depth)==j,'Temperature']) 
+    #assinging the binned temperature to the j-th row and st-th column of the TEM matrix
+    TEM[j,st] <- temp
   }
 }
+```
 
-image.plot(x=stationLat[4:1],y=-100:-1,t(TEM[100:1,4:1]),
+Now we've created our matrix, we can plot the temperature section.
+
+```{r}
+image.plot(x=1:4,y=-100:-1,t(TEM[100:1,4:1]),
            zlim=c(8,20),
            col=tim.colors(24),
-           xlab='latitude (deg N)',
+           xlab='station',
            ylab='Depth (m)',
-           main='colby20170912',
+           main='Cruise 20160908',
            legend.lab='Temperature (C)',
 legend.line=2.5)
 
@@ -140,53 +177,22 @@ library("RColorBrewer")
 
 ```{r}
 
-colpal <- colorRampPalette(brewer.pal(9,'YlOrBr'))   # make colors
+colpal <- colorRampPalette(brewer.pal(9,'YlOrRd'))   # make colors
 
-image.plot(x=stationLat[4:1],y=-100:-1,t(TEM[100:1,4:1]),
+image.plot(x=1:4,y=-100:-1,t(TEM[100:1,4:1]),
            zlim=c(8,20),
-           col=colpal(24),
-           xlab='latitude (deg N)',
+           col=colpal(60),
+           xlab='Station',
            ylab='Depth (m)',
-           main='colby20170912',
+           main='Cruise 20160908',
            legend.lab='Temperature (C)',
 legend.line=2.5)
 ```
 
-#### Example: Plot a temperature section for all the cruises
-
-```{r}
-for (cruise in names(cruiseList)) {
-  cruiseData <- cruiseList[[cruise]]
-  
-  stationLat <- c(43+54.130/60, 43+51.8/60, 43+48.56/60, 43+44.87/60)
-  
-  TEM <- matrix(NA,nrow = 100, ncol = 4)
-  
-  stations = names(cruiseData)
-  
-  for (st in stations){
-    for (j in 1:100){
-      stationData <- cruiseData[[st]]
-      
-      stationNum <- as.numeric(substr(st,nchar(st),nchar(st)))
-      
-      TEM[j,stationNum] <- mean(stationData[ceiling(stationData$Depth)==j,'Temperature']) 
-    }
-  }
-  
-  image.plot(x=stationLat[4:1],y=-100:-1,t(TEM[100:1,4:1]),
-             zlim=c(8,20),
-             col=colpal(24),
-             xlab='latitude (deg N)',
-             ylab='Depth (m)',
-             main=cruise,
-             legend.lab='Temperature (C)',
-  legend.line=2.5)
-}
-```
 
 # 3. Assignment (in lab)
 
-1. Try altering the color palette. Remember to find a list of the Color Brewer palettes, check the RColorBrewer help. For this type of image, use a sequential color palette.
+1. Plot a contour plot for different discrete variables. Can you figure out how to change the color scheme?
 
-2. Plot an oceanographic section for different variables. Remember to change the limits of the color scale by adjusting the `zlim` argument to `image.plot`.
+2. Plot an oceanographic section for different variables from the CTD casts. Remember to change the limits of the color scale by adjusting the `zlim` argument to `image.plot`.
+
