--- a/Tutorials/Colby2019/Lab2/Lab02.Rmd
+++ b/Tutorials/Colby2019/Lab2/Lab02.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Lab 2: Visualization and statistics with CTD data"
-output: html_notebook
+title: "Lab02-nico"
+output: html_document
 ---
 
 This lab focuses on statistics and data visualization, with the aim of using CTD data to look for relationships in oceanographic data. The tools you are introduced to here can be used to graph and analyze data in your labs, your independent research projects and the cruise data gathered throughout the semester. Be sure to save any scripts that you develop so you can continue to use them.
@@ -21,26 +21,25 @@ You should be left with a rectangular block of numbers, with the first row as "h
 Let's read in the data:
 
 ```{r}
-DATA<- read.csv("Colby_cruise_data_2012-2017.csv", header=TRUE)
+DATA<- read.csv("Colby_cruise_data_2012-2017-nico.csv", header=TRUE)
 
 ```
 
 # 2. Scatter plots, correlations and linear regressions
 
-In this section, we'll make use of ggplot, part of the tidyverse package. The tidyverse is a group of R packages designed for data science. We need to install this package before using it:
+In this section, we'll make use of ggplot.
 
-```{r}
-install.packages("tidyverse")
-```
+**Resource for ggplot:** http://r4ds.had.co.nz/data-visualisation.html
 
-For more information on the tidyverse see https://www.tidyverse.org/
+**Cheatsheet for ggplot:** https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf
 
-### Question: How are two variables related?
+
+### Question:
+####How are two variables related?
 
 ### Objectives:
-
-1. Visualize relationships and correlations between variables
-2. Use appropriate statistics to describe the relationships.
+####1. Visualize relationships and correlations between variables
+####2. Use appropriate statistics to describe the relationships.
 
 ## 2.1 Scatter plots
 
@@ -52,17 +51,13 @@ Scatter plots allow us to quickly understand and visualize relationships.
 library("ggplot2")
 
 ggplot(data = DATA) + 
-  geom_point(mapping = aes(x = Temperature, y = Fluorescence),color="skyblue",shape=18,size=1) +
+  geom_point(mapping = aes(x = Temperature, y = Fluorescence)) +
   xlab('Temperature (deg C)') +
   ylab('Fluorescence (mg/m^3)') +
-  coord_cartesian(xlim=c(7,18), ylim=c(0,12)) 
+  xlim(7,18) + ylim(0,12)
 ```
 
 The above is a great visual tool - but how do we define this relationship scientifically and statistically? We'll look at two different techniques, but often scientists tend to use both of these.
-
-**Resource for ggplot:** http://r4ds.had.co.nz/data-visualisation.html
-
-**Cheatsheet for ggplot:** https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf
 
 ## 2.2 Correlations
 
@@ -74,18 +69,18 @@ How is correlation defined in a mathematical sense? Using *correlation coefficie
 
 ### 2.2.1 Correlation coefficients
 
-There are a range of different correlation coefficients, but the most common of these is the *Pearson correlation coefficient*. The Pearson correlation coefficient, often referred to as simply the correlation coefficient, is given the symbol $r$ and describes the linear correlation between two variables. It takes a value between -1 and 1, where a value of 0 indicates no linear correlation and values further from 0 in either direction (closer to -1 and 1) indicate stronger linear correlations. The sign of the correlation coefficient describes the direction of the correlation e.g. a positive $r$ indicates a positive relationship between the variables. See the image below for examples.
+Correlation coefficiants can be used to evaluate the direction and the intensity of the relationship between two variables. There are a range of different correlation coefficients, but the most common of these is the *Pearson correlation coefficient*. The Pearson correlation coefficient, often referred to as simply the correlation coefficient, is given the symbol $r$ and describes the linear correlation between two variables. It takes a value between -1 and 1. The sign of the correlation coefficient describes the direction of the correlation e.g. a positive $r$ indicates a positive relationship between the variables. A value of 0 indicates no linear correlation and values further from 0 in either direction (closer to -1 and 1) indicate stronger linear correlations.  See the image below for examples.
 
-![](Correlation_examples2.png)
-https://en.wikipedia.org/wiki/Pearson_correlation_coefficient#/media/File:Correlation_examples2.svg
+<img src="C:/Users/nmayot/Documents/PostDoc/teaching supervise/Colby 2019/Rbigelow/Tutorials/Colby2019/Lab2/Correlation_examples.png"
+
 
 #### Example: What is the correlation coefficient between chlorophyll fluorescence and temperature?
 
 ```{r}
 # create variables for our two parameters of interest
-# NB: we want to the data to be vectors, rather than dataframe columns so we can perform our analysis, hence we need to use two brackets, [[]], to index the DATA dataframe
-temp <- DATA[['Temperature']]
-fl <- DATA[['Fluorescence']]
+# NB: we want to the data to be vectors, rather than dataframe columns so we can perform our analysis, hence we need to use the dollar sign, $, to index the DATA dataframe
+temp <- DATA$Temperature
+fl <- DATA$Fluorescence
 
 # calculate the correlation coefficient
 corValue <- cor.test(temp, fl, method="pearson")
@@ -96,7 +91,7 @@ corValue
 
 ## 2.3 Linear regressions
 
-The relationship between two variables can be explained through a simple linear regression (here *simple* refers to the fact two variables are being related). The main outputs from this kind of analysis are a line or curve of best fit and various *summary statistics* or *goodness-of-fit statistics* or *explanatory variables* which define how good the linear regression is. This analysis can be extended to describe relationships between multiple variables via linear multiple regression analysis.
+The relationship between two variables can be explained through a simple linear regression (here *simple* refers to the fact that two variables are being related). The main outputs from this kind of analysis are a line or curve of best fit and various *summary statistics* or *goodness-of-fit statistics* or *explanatory variables* which define how good the linear regression is. This analysis can be extended to describe relationships between multiple variables via linear multiple regression analysis.
 
 ### 2.3.1 Best fit line
 
@@ -107,22 +102,19 @@ The relationship between two variables can be explained through a simple linear 
 model1 <- lm(fl ~ temp)
 
 # assigning the slope and intercept fromt the model to variables
-slope <- model1['coefficients'][[1]][[2]]
-intercept <- model1['coefficients'][[1]][[1]]
+intercept <- model1$coefficients[1]
+slope <- model1$coefficients[2]
 
 # adding the line to our plot: note we've added the line by three different methods
-p <- ggplot(data = DATA) + 
-  geom_point(mapping = aes(x = Temperature, y = Fluorescence), color='skyblue', shape=18,size=1) +
-  geom_smooth(mapping = aes(x = Temperature, y = Fluorescence), method = lm, se = FALSE, color='blue') +
-  geom_abline(slope=slope,intercept=intercept, size=1, color = "darkblue") +
-  stat_function(fun = function(x) intercept + slope * x, size = 1, color = 'blue') +
+ggplot(data = DATA) + 
+  geom_point(mapping = aes(x = Temperature, y = Fluorescence)) +
+  geom_abline(slope=slope,intercept=intercept, size=5, color = "darkblue") +   #  1st method
+  geom_smooth(mapping = aes(x = Temperature, y = Fluorescence), method = lm, se = FALSE, color='red', size=3) +   #  2nd method
+  stat_function(fun = function(x) intercept + slope * x, size = 1, color = 'cyan') +   #  3rd method
   xlab('Temperature (deg C)') +
   ylab('Fluorescence (mg/m^3)') +
-  coord_cartesian(xlim=c(7,18), ylim=c(0,12)) 
-
-# let's add the equation to the figure
-p + annotate("text", x = 9, y = 11, label = paste("Temp = ", format(slope, digits=3), "Fluor + ", format(intercept,digits=3), sep=""))
-
+  coord_cartesian(xlim=c(7,18), ylim=c(0,12)) +
+  annotate("text", x = 9.5, y = 11, label = paste("Temp = ", format(slope, digits=3), "x(Fluor) + (", format(intercept,digits=3), ")", sep="")) # let's add the equation to the figure
 
 ```
 
@@ -136,23 +128,22 @@ model2 <- lm(fl ~ temp + I(temp^2))
 model3 <- lm(fl ~ temp + I(temp^2) + I(temp^3))
 
 # assigning the coefficients from the models to the variables
-p2 <- model2['coefficients'][[1]][[3]]
-p1 <- model2['coefficients'][[1]][[2]]
-p0 <- model2['coefficients'][[1]][[1]]
+p2 <- model2$coefficients[3]
+p1 <- model2$coefficients[2]
+p0 <- model2$coefficients[1]
 
-q3 <- model3['coefficients'][[1]][[4]]
-q2 <- model3['coefficients'][[1]][[3]]
-q1 <- model3['coefficients'][[1]][[2]]
-q0 <- model3['coefficients'][[1]][[1]]
-
+q3 <- model3$coefficients[4]
+q2 <- model3$coefficients[3]
+q1 <- model3$coefficients[2]
+q0 <- model3$coefficients[1]
 
 # adding the line to our plot: note only one of the above methods works for curves, stat_function
 ggplot(data = DATA) + 
-  geom_point(mapping = aes(x = Temperature, y = Fluorescence), color='cornflowerblue', shape=18,size=1) +
-  geom_smooth(mapping = aes(x = Temperature, y = Fluorescence, color='line'), method = lm, se = FALSE,size=1.2) +
-  stat_function(fun = function(x) p0 + p1 * x + p2 * (x^2), size = 1.2, aes(color = '2nd order')) +
-  stat_function(fun = function(x) q0 + q1 * x + q2 * (x^2) + q3 * (x^3), size = 1.2, aes(color = '3rd order')) +
-  scale_colour_manual("",values = c("darkblue", "orange", "blue")) +
+  geom_point(mapping = aes(x = Temperature, y = Fluorescence)) +
+  stat_function(fun = function(x) intercept + slope * x, size = 2, aes(color = '1st order')) +
+  stat_function(fun = function(x) p0 + p1 * x + p2 * (x^2), size = 3, aes(color = '2nd order')) +
+  stat_function(fun = function(x) q0 + q1 * x + q2 * (x^2) + q3 * (x^3), size = 1, aes(color = '3rd order')) +
+  scale_colour_manual("",values = c("#a6cee3", "#1f78b4", "#b2df8a")) + # with Color-hex Color code
   xlab('Temperature (deg C)') +
   ylab('Fluorescence (mg/m^3)') +
   coord_cartesian(xlim=c(7,18), ylim=c(0,12)) 
@@ -196,49 +187,78 @@ adjrsquare = c(sum_model1$adj.r.squared,sum_model2$adj.r.squared,sum_model3$adj.
 std_error = c(sum_model1$sigma,sum_model2$sigma,sum_model3$sigma)
 
 # unfortunately we can't extract the p-value in the same way, but we can calculate it separately
-pvalue = c(pf(sum_model1$fstatistic[[1]],sum_model1$fstatistic[[2]],sum_model1$fstatistic[[3]],lower.tail = FALSE),
-           pf(sum_model2$fstatistic[[1]],sum_model2$fstatistic[[2]],sum_model2$fstatistic[[3]],lower.tail = FALSE),
-           pf(sum_model3$fstatistic[[1]],sum_model3$fstatistic[[2]],sum_model3$fstatistic[[3]],lower.tail = FALSE))
+pvalue = c(pf(sum_model1$fstatistic[1],sum_model1$fstatistic[2],sum_model1$fstatistic[3],lower.tail = FALSE),
+           pf(sum_model2$fstatistic[1],sum_model2$fstatistic[2],sum_model2$fstatistic[3],lower.tail = FALSE),
+           pf(sum_model3$fstatistic[1],sum_model3$fstatistic[2],sum_model3$fstatistic[3],lower.tail = FALSE))
 
 
 # creating a dataframe containing the model statistics
 statsData = data.frame(rsquare,adjrsquare,std_error,pvalue,row.names=c("model1","model2","model3"))
 statsData
-
-# note: a quick & easy way to pull out the model coefficients and their associated statistics, displaying them in a digestable form, is to use the tidy function from the broom package (part of the tidyverse)
-library("broom")
-tidy(model1)
 ```
 
 # 3. Temperature-Salinity Diagrams
 
 A special kind of scatter plot used in oceanography is a Temperature-Salinity diagram or T-S diagram. A T-S diagram is a great way to visualize the different water masses present in your data. 
 
-We've written a short R function that plots a T-S diagram from your CTD data. We'll need to import a couple of packages for it to work though:
+We've written a short R script that plots a T-S diagram from your CTD data with `ggplot()`. We'll need to install (or load) some packages for it to work though:
 
-```{r}
-install.packages("marelac")
-install.packages("plot3D")
+```{r, warning=FALSE, message=FALSE}
+# install.packages("oce")
+# install.packages("directlabels")
+# install.packages("scales")
+library("oce")
+library("directlabels")
+library("scales")
 ```
 
+To draw a T-S diagram and compare the different water masses, we need to use the potential temperature ($\theta$) and the potential density ($\sigma_\theta$). The `oce` package provides functions for working with oceanographic data, and for evaluating the thermodynamic properties of seawater (e.g., $\theta$ and $\sigma_\theta$).
 
 ```{r}
-#load the function into your R workspace:
-source('TSdiagram.R')
+# Calculate the potential temperature
+z <- DATA$Depth
+sal <- DATA$Salinity   # Practical Salinity [unitless]
+temp <- DATA$Temperature    # in-situ Temperature [degC]
+p <- gsw_p_from_z(-z,43.85)    # Pressure from height [dbar]
+pt <- swTheta(sal,temp,p,0,-69.50,43.85,eos="gsw")    # Potential temperature [degC]
+DATA$pt <- pt
 
-#call the function:
+# Create potential density contours
+ptlim <- seq(-5,30,1) 
+sallim <- seq(29,34,.5)
+saliso <- rep(sallim,length(ptlim))
+ptiso <- rep(ptlim,length(sallim))
 
-TSdiagram(DATA[["Temperature"]],DATA[["Salinity"]]) 
+sigmaiso <- swSigma0(saliso,ptiso,0,-69.50,43.85,eos="gsw")
+isopycnals <- data.frame(sal = saliso, pt = ptiso, sigma = sigmaiso)
+
+# plot
+v <- ggplot() + 
+  geom_contour(isopycnals, mapping = aes(x=sal, y=pt, z=sigma, colour = ..level..),breaks = seq(17, 27,1),color="black") + 
+  geom_point(DATA, mapping = aes(x=Salinity, y=Temperature)) +
+  xlim(29,34) + ylim(-5,30) +
+  xlab("Practical Salinity") + ylab("Potential Temperature (deg C)")
+
+v <- direct.label(v, list("top.pieces", colour="black")) # to draw the potential density contours
+v
 ```
 
-What we get is a plot of temperature vs salinity, with lines of constant density, or sigma (at an assumed atmospheric pressure of 1 bar).
-
-We can also look at how other variables are related to temperature and salinity by plotting the color of the points based on the variable value:
+What we get is a plot of potential temperature vs practical salinity, with lines of constant potential density ($\sigma_\theta$ in [$kg/m^3$]). We can also look at how other variables are related to temperature and salinity by plotting the color of the points based on the variable value:
 
 ```{r}
-TSdiagram(DATA[["Temperature"]],DATA[["Salinity"]],DATA[['Fluorescence']],'Fluorescence (mg m^-3)',clim=c(0,11)) 
+v2 <- ggplot() + 
+  geom_contour(isopycnals, mapping = aes(sal, pt, z = sigma, colour = ..level..),breaks = seq(17, 27,1),color="black") +
+  geom_point(subset(DATA,!is.na(Fluorescence)), mapping = aes(x=Salinity, y=Temperature, color=Fluorescence)) +
+  xlim(29,34) + ylim(-5,30) +
+  xlab("Practical Salinity") + ylab("Potential Temperature (deg C)") +
+  scale_colour_gradient(low = "#132B43", high = "#32CD32",limits=c(0, 10), oob=squish)
+
+v2 <- direct.label(v2, list("top.pieces", colour="black")) + guides(colour = guide_colorbar(title ="Fluorescence (mg/m^3)"))
+
+v2
 ```
 
+We used the function `subset()` in order to keep only the rows that have not missing values (NA) in the Fluorescence column. The function `scale_colour_gradient()` controls the colorbar rendering.
 
 # 4. Assignment
 
@@ -254,15 +274,4 @@ TSdiagram(DATA[["Temperature"]],DATA[["Salinity"]],DATA[['Fluorescence']],'Fluor
       
 2. Try plotting two more T-S diagrams, each with a different variable represented by the color of the points. Write a couple of sentences describing what these plots tell you about the different waters sampled on the cruises.
 
-**Email me (cmitchell@bigelow.org) your assignment, including the scripts and figures you made. DUE: Monday 17th at 9pm.**
-
-
-
-
-
-
-
-
-
-
-
+**Email me (nmayot@bigelow.org) your assignment, including the scripts and figures you made. DUE:mm/dd/yyyy**
