--- a/Tutorials/Colby2019/Lab4/Lab04.Rmd
+++ b/Tutorials/Colby2019/Lab4/Lab04.Rmd
@@ -1,17 +1,19 @@
 ---
 title: "Lab 4: Visualizing 2D patterns in oceanographic cruise data: part 2"
-output: html_notebook
+output: html_document
 ---
 
 This lab focuses on visualizing  temporal and spatial patterns in oceanographic cruise data with a focus on changes over time. The tools you are introduced to here can be used to graph and analyze data in your labs, your independent research projects and the cruise data gathered throughout the semester. Be sure to save any scripts that you develop so you can continue to use them.
 
-# 1. Importing and wrangling data
+# A. Importing and wrangling data
 
 Today, we are going to create plots of depth vs time for a given year and station, so we are going to need to wrangle our data into a different form compared to yesterday.
 
 Let's start by importing the data as before.
 
 ```{r}
+setwd('C:/Users/nmayot/Documents/PostDoc/teaching supervise/Colby 2019/Rbigelow/Tutorials/Colby2019/Lab4')
+
 # read in the whole csv file
 CTDdata <- read.csv('Colby_cruise_data_2012-2017.csv')
 ```
@@ -20,188 +22,211 @@ Our first big step is to format the dates into a more usable form.
 
 ```{r}
 #making a list of the dates of each cruise
-dates <- CTDdata[['Date']]
-
-# making a list of the year
-years <- floor(dates/10000)
-
-# making a list of the months and days in mmdd format
-monthdays <- dates - (years*10000)
-
-# making a list of the months
-mnths <- floor(monthdays/100)
-
-# making a list of the days
-days <- monthdays - (mnths*100)
+dates <- CTDdata$Date
 
 # converting our dates to R date-times
-Rdates <- ISOdate(years,mnths,days)
+Rdates <- as.Date(as.character(dates),"%Y%m%d")
+
+# making a list of the year
+yyyy <- as.numeric(format(Rdates,"%Y"))
+
+# making a list of the months
+mm <- as.numeric(format(Rdates,"%m"))
+
+# making a list of the days
+dd <- as.numeric(format(Rdates,"%d"))
 
 # determining the day of year (Julian Day) for each date
-jday <- strftime(Rdates, format = '%j')
+jday <- as.numeric(format(Rdates,"%j"))
 
 # add these to our dataframe
-CTDdata$year <- years
-CTDdata$month <- mnths
-CTDdata$day <- days
-CTDdata$doy <- jday
+CTDdata$Rdates <- Rdates
+CTDdata$year <- yyyy
+CTDdata$month <- mm
+CTDdata$day <- dd
+CTDdata$jday <- jday
 ```
 
-We just created a day-of-year variable which we are going to use as our x-axis. Depth will be our y-axis. We need to extract from the main `CTDdata` the data for a specific year and station before we can make our plot.
+We just created a julian day (day-of-year) variable which we are going to use as our x-axis. Depth will be our y-axis. We need to extract from the main `CTDdata` the data for a specific year and station before we can make our plot.
 
 ```{r}
-# creating an index based on year
-index <- (years == 2016)
+# extracting our chosen year and station of data from CTDdata
+stationData <- subset(CTDdata, year == 2016 & Station == 4)
 
-# extracting our chosen year of data from CTDdata
-yearData <- CTDdata[index,]
-
-# extracting the data for our chosen data from yearData
-stationData <- yearData[yearData$Station == 4,]
-
-# making a list of the day of the year each cruise took place on
-doy <- unique(stationData$doy)
+# making a list of the julian day each cruise took place on
+alljday <- unique(stationData$jday)
 
 #counting how many different days of year (i.e. cruises) we have
-numCols <- length(doy)
+numCols <- length(alljday)
 
 #creating an empty matrix with 100 rows (i.e. for 100 depths) and a column for each cruise in this year
 TEM <- matrix(NA,nrow = 100, ncol = numCols)
 
 #looping through each cruise
-for (i in seq_along(doy)){
+for (j in seq_along(alljday)){
+  #extracting the relevant cruise from the stationData data frame
+  jdayData <- subset(stationData, jday == alljday[j])
+  
   #looping through each depth interval (from 1m to 100m)
-  for (j in 1:100){
-    #extracting the relevant cruise from the stationData data frame
-    cruiseData <- stationData[stationData$doy == doy[i],]
+  for (d in 1:100){
     
     #binned temperature value for given depth interval
-    temp = mean(cruiseData[ceiling(cruiseData$Depth)==j,'Temperature']) 
-
-    #assinging the binned temperature to the j-th row and st-th column of the TEM matrix
-    TEM[j,i] <- temp
+    temp <- mean(jdayData[ceiling(jdayData$Depth) == d,"Temperature"]) 
+    
+    #assinging the binned temperature to the d-th row and j-th column of the TEM matrix
+    TEM[d,j] <- temp
   }
 }
 
-
 ```
 
-# 2. Plotting temporal changes
+# B. Plotting temporal changes
+
+## B1. Temporal changes over a year at one station
 
 We have manipulated our data into a form where we can now plot it. We are going to use the same plotting function as we used yesterday for doing the section plots.
 
 ```{r}
-library("fields")
+library("ggplot2")
 
-image.plot(x=as.numeric(doy),y=-100:-1,t(TEM[100:1,]),
-           zlim=c(8,20),
-           col=tim.colors(200),
-           xlab='day of year',
-           ylab='Depth (m)',
-           main='Station 4, 2016',
-           legend.lab='Temperature (C)',
-legend.line=2.5)
+# Create the data frame
+tem <- as.vector(TEM) # Temperature
+jda <- as.vector(t(matrix(alljday,ncol=100,nrow=length(alljday))))  # Station number
+dep <- as.vector(matrix(1:100,ncol=length(alljday),nrow=100))   # Depth
+CTD <- data.frame(JulianDay=jda, Depth=dep, Temperature=tem) 
+
+# 2D plot
+ggplot(CTD, aes(x=JulianDay, y=Depth)) +
+  geom_tile(aes(fill=Temperature)) +
+  geom_contour(aes(z = Temperature),color="white") +
+  scale_y_reverse() +
+  scale_fill_continuous(limits = c(8,18)) +
+  labs(y="Depth (m)", fill="Temperature (deg C)")
 ```
 
-Let's make this into a couple of funtions so it is easier to make similar plots for different stations or different years:
+## B2. Coding technique: Functions
+
+Functions are blocks of code which when called, perform a specific task. Usually you give them an input and they give you an output. We've used lots of different R in-built functions e.g. `read.csv()`, `mean()`, etc. We can write our own functions for our own specific tasks.
+
+#### Example: write a function which adds two numbers
 
 ```{r}
-#function for converting our data into a matrix for a given year and station (yesterday we did this for a given cruise)
-col2matrix_yr_st <- function(CTDdata,yr,st,colName){
-  #making an index based on year (provided by the yr argument)
-  index <- (CTDdata$year == yr)
+addition <- function(a,b){
+  return(a+b)
+}
+
+addition(9,3)
+```
+
+As shown in this image below, an essential feature of functions is that the variables used within are local. This means that their scope lies within -and is limited to- the function itself and are therefore invisible outside the function body.
+
+<img src="function_R_scoping.png">
+
+Let's write two functions: the first one to turn a variable from the `CTDdata` data frame into a matrix, and the second one to plot this variable over time at one station. To do this, we'll just copy the code from above and wrap it in a function.
+
+```{r}
+# function for converting our data into a matrix for a given year and station
+col2matrix_yr_st <- function(dataset,yr,st,colName){
+  # DESCRIPTION OF ARGUMENTS:
+  # -----  dataset = data frame with CTD data
+  # -----  yr = year wanted
+  # -----  st = station wanted
+  # -----  colName = variable wanted 
   
-  #indexing the CTDdata using the above index
-  yearData <- CTDdata[index,]
+  # extracting our chosen year and station of data from CTDdata
+  subdata <- subset(dataset, year == yr & Station == st)
   
-  #indexing the yearData based on the station (provided by the st argument)
-  stationData <- yearData[yearData$Station == st,]
+  # making a list of the julian day each cruise took place on
+  uniqj <- unique(subdata$jday)
   
-  #making a list of the day of years (for the x-axis)
-  doy <- unique(stationData$doy)
-  numCols <- length(doy)
+  #counting how many different days of year (i.e. cruises) we have
+  nbcol <- length(uniqj)
   
   #creating an empty matrix with 100 rows (i.e. for 100 depths) and a column for each cruise in this year
-  TEM <- matrix(NA,nrow = 100, ncol = numCols)
+  MAT <- matrix(NA,nrow = 100, ncol = nbcol)
   
   #looping through each cruise
-  for (i in seq_along(doy)){
+  for (j in seq_along(uniqj)){
+  
+    #extracting the relevant cruise from the stationData data frame
+    subdataj <- subset(subdata, jday == uniqj[j])
+    
     #looping through each depth interval (from 1m to 100m)
-    for (j in 1:100){
-      #extracting the relevant cruise from the stationData data frame
-      cruiseData <- stationData[stationData$doy == doy[i],]
+    for (d in 1:100){
       
       #binned temperature value for given depth interval
-      temp = mean(cruiseData[ceiling(cruiseData$Depth)==j,colName]) 
-  
-      #assinging the binned temperature to the j-th row and st-th column of the TEM matrix
-      TEM[j,i] <- temp
+      djvalue <- mean(subdataj[ceiling(subdataj$Depth) == d,colName]) 
+      
+      #assinging the binned temperature to the d-th row and j-th column of the MAT matrix
+      MAT[d,j] <- djvalue
     }
   }
   
-  #we can only return one object from a function, but we want to return two... so in this case, we can put the two objects into a list and return the list
-  returnList = list(mat = TEM,doy = doy)
+  
+  # we can only return one object from a function, but we want to return two... so in this case, we can put the two objects into a list and return the list
+  returnList = list(mat = MAT, alljday = uniqj)
   return(returnList)
 }
-
-#function to plot
-sectionPlot <- function(x,z,zLims,title,colName){
-  #DESCRIPTION OF ARGUMENTS:
-  #x = x-variable, z = variable to plot in color,
-  #zLims = limits of the colorscale,
-  #title = title to give the figure
-  #colName = label for the colorbar
-  image.plot(x=x,y=-100:-1,t(z[100:1,]),
-             zlim=zLims,
-             col=tim.colors(200),
-             xlab='day of year',
-             ylab='Depth (m)',
-             main=title,
-             legend.lab=colName,
-  legend.line=2.5)
+```
+```{r}
+library("akima")
+sectionPlot <- function(x,z,zLims,figName,clbName){
+  # DESCRIPTION OF ARGUMENTS:
+  # -----  x = x-variable, z = variable to plot in color,
+  # -----  zLims = limits of the colorscale,
+  # -----  title = title to give the figure
+  # -----  colName = label for the colorbar  
+  
+  # Create the data frame
+  xvar <- as.vector(t(matrix(x,ncol=100,nrow=length(x))))  # Station number
+  zvar <- as.vector(z) # Temperature
+  yvar <- as.vector(matrix(1:100,ncol=length(x),nrow=100))   # Depth
+  CTD <- data.frame(JulianDay=xvar, Depth=yvar, Zvalue=zvar) 
+  
+  # Remove NA values
+  x <- xvar[!is.na(zvar)]
+  y <- yvar[!is.na(zvar)]
+  z <- zvar[!is.na(zvar)]
+  
+  # bivariate linear interpolation
+  CTD.li <- interp(x, y, z)
+  
+  # Prepare the data frame for ggplot()
+  CTD.li$variable <- as.vector(CTD.li$z)
+  CTD.li$JulianDay <- as.vector(matrix(CTD.li$x,ncol=ncol(CTD.li$z),nrow=nrow(CTD.li$z)))
+  CTD.li$Depth <- as.vector(t(matrix(CTD.li$y,ncol=ncol(CTD.li$z),nrow=nrow(CTD.li$z))))
+  CTD.li <- as.data.frame(CTD.li)
+  
+  # 2D plot
+  p <- ggplot() +
+        geom_tile(data = CTD.li, aes(x=JulianDay, y=Depth, fill=variable)) +
+        geom_contour(data = CTD.li, aes(x=JulianDay, y=Depth, z = variable),color="white") +
+        geom_point(data = subset(CTD, !is.na(Zvalue)), aes(x=JulianDay, y=Depth),color="black") +
+        scale_y_reverse() + scale_fill_continuous(limits=zLims) +
+        labs(y="Depth (m)", fill=clbName, title = figName)
+  
+  return(p)
 }
-
 ```
 
-Let's try out these functions for a different year:
+Let's try our functions for a different year:
 
 ```{r}
-
-output <- col2matrix_yr_st(CTDdata,2017,4,'Temperature')
-sectionPlot(x=as.numeric(output$doy),z = output$mat, zLims = c(8,20), 
-            title = 'Station4, 2017',colName = 'Temperature (deg C)')
-
+output <- col2matrix_yr_st(dataset = CTDdata, yr = 2017, st = 4, colName = "Temperature")
+T2017st4 <- sectionPlot(output$alljday, output$mat, c(8,18), "Station 4, 2017", "Temperature (deg C)")
+T2017st4
 ```
 
 Or what about a plot for all the stations in 2016:
-```{r}
+```{r, fig.width=15, warning=FALSE}
+library(gridExtra)
 
+yyyy <- 2016
 for (i in 1:4){
-  output <- col2matrix_yr_st(CTDdata,2016,i,'Temperature')
-  sectionPlot(x=as.numeric(output$doy),z = output$mat, zLims = c(8,20), 
-              title = paste('Station ',i,', 2016', sep=''),colName = 'Temperature (deg C)')
+  output <- col2matrix_yr_st(CTDdata, yyyy, i, "Temperature")
+  p <- sectionPlot(output$alljday, output$mat, c(8,18), 
+              paste("Station ",i,", ",yyyy, sep=""), "Temperature (deg C)")
+  eval(parse(text=paste("p",i,"<- p",sep="")))
 }
+grid.arrange(p1,p2,p3,p4, ncol=2)
 ```
-
-
-
-
-# Assignment
-
-We will assign you each a discrete variable (from the bottle data) and one continous variable (from the CTD profiles) and a year. 
-
-For your assigned variables & year:
-
-1. Plot
-    1. A contour plot (depth vs station) of the discrete variable *for each cruise*
-    2. A section plot (depth vs station) of the continuous variable *for each cruise*
-    3. A temporal change plot (depth vs day of year) of the discrete variable *for station 4*
-    4. A temporal change plot (depth vs day of year) of the continuous variable *for station 4*
-    
-2. Write a couple of paragraphs of a results + discussion section of a paper. This should cover the following:
-    1. How do the variables change with respect to space (vertically/horizontally) and time?
-    2. How do the changes in the two variables relate to each other?
-    3. What ocean processes underly these changes?
-
-
-### Due Friday 28th at 10pm. Email your write-up and figures (cmitchell@bigelow.org)
